# microparsec

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  parsers.rs  string_utils.rs  types.rs
src/parsers/: any.rs  between.rs  either.rs  exact.rs  expect.rs  failure_type.rs  float.rs  forget.rs  integer.rs  letters.rs  many.rs  map.rs  not.rs  optional.rs  regex.rs  sequence.rs  spaces.rs  string.rs  surely.rs
tests/: optional.rs  sequence.rs  string.rs  tests.rs  utils.rs
