[package]
name = "parse_me"
version = "0.6.1"
edition = "2021"

license = "MIT"
description = "Parser combinator crate. Provides a simple parser combinator crate for Rust."
repository = "https://github.com/SuspiciousScorpion/parser-combinator"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"

[features]
thread-safe = []
