[package]
name = "microparsec"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "A simple parser combinator crate for Rust."
repository = "https://github.com/ComicalCache/microparsec"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"

[dev-dependencies]
rand = "0.8.5"

[features]
thread-safe = []
